lintian (2.5.55) UNRELEASED; urgency=medium

  "XXX: generate tag summary"

  * checks/python.pm:
    + [CL] Move to "Type: source, binary" check type.
    + [CL] Also match packages named "python2-*" as relating to Python 2.x.

  * t/tests/python-new-python2-package/*:
    + [CL] Correct Depends of python2.7 → python3 in Python 3 test
      package.

 -- Chris Lamb <lamby@debian.org>  Fri, 29 Sep 2017 19:13:19 +0100

lintian (2.5.54) unstable; urgency=medium

  * checks/copyright-file.pm:
    + [CL] Prevent false positives in copyright-year-in-future when
      matching URLs.
    + [CL] Prevent false positives in copyright-year-in-future when
      matching the Tcl license (eg. postgresql-10).  (Closes: #876360)
  * checks/debhelper.pm:
    + [CL] Ensure that "missing-build-dependency-for-dh_-command" is not
      emitted for dh-strip-nondeterminism at Debhelper compat levels >=
      10.  (Closes: #876443)
  * checks/files.desc:
    + [CL] Correct grammar and punctuation in description of
      node-package-install-in-nodejs-rootdir.
  * checks/changelog-file.pm:
    + [CL] Also ignore lines that (meta) reference "typo" when checking
      for "spelling-error-in-changelog".

  * data/standards-version/release-dates:
    + [CL] Add 4.1.1 as a known standards version.

  * debian/control:
    + [CL] Mention Debian Policy v4.1.1 in the description.

  * t/tests/binaries-from-other-arch/debian/debian/dumpobj:
    + [CL] Apply patch from Jakub Wilk to prevent test failures on
      armhf/arm64, etc.  (Closes: #877147)
  * t/tests/fields-perl-provides/{desc,tags}:
    + [CL] Apply patch from Gianfranco Costamagna (locutusofborg) to fix
      failing test on 32-bit architectures and add a suitable Test-Against
      stanza to make this easier to catch in future. Thanks to Matthias
      Klose (doko) for the report.  (Closes: #876343)

 -- Chris Lamb <lamby@debian.org>  Fri, 29 Sep 2017 16:57:39 +0100

lintian (2.5.53) unstable; urgency=medium
