@@ -1,0 +1,6 @@
+Testname: python-django-package-does-not-depend-on-django
+Sequence: 6000
+Version: 1.0
+Description: Check for Django packages that do not specify a Django Depends
+Test-For:
+ django-package-does-not-depend-on-django
